test/e2e/testdata/eg-uninstall-install.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-backend-eg-un-install
  namespace: gateway-package-infra
spec:
  parentRefs:
    - name: package-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /eg-uninstall-install
      backendRefs:
        - name: infra-backend
          port: 8080
